--- a/assets/templates/sections/list/mobile/resumeSection.html
+++ b/assets/templates/sections/list/mobile/resumeSection.html
@@ -4,7 +4,7 @@
 
     <div class="screenMobile__navbar">
         <div onClick={ hide } onUpdate="none" class="screenMobile__nav__back"></div>
-        <div class="screenMobile__nav__title c-blue fontSize-18 fontWeight-bold text-uppercase">{ item.plan }</div>
+        <div class="screenMobile__nav__title">{ item.plan }</div>
         <div onClick={ open.dropMenu } onUpdate="none" class="screenMobile__nav__options"></div>
     </div>
     <div name="content" class="section-scroll section__content">
