--- a/views/private.html
+++ b/views/private.html
@@ -30,7 +30,7 @@
 </head>
 <body class="appLoading">
 
-    <root-main id="app"></root-main>
+    <!-- <root-main id="app"></root-main> -->
 
     <div id="loader">
         <div class="loader-spinner"></div>
@@ -41,6 +41,7 @@
 
     <!--/ Templates /-->
     <script src="/assets/templates/root.html" type="riot/tag"></script>
+    <script src="/assets/templates/root-mobile.html" type="riot/tag"></script>
 
     <script src="/assets/templates/sections/menu/menu.html" type="riot/tag"></script>
 
@@ -106,8 +107,10 @@
     <!--/ Profile /-->
     <script src="/assets/templates/sections/profile/profile.html" type="riot/tag"></script>
     <script src="/assets/templates/sections/profile/profileData.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/profile/profileDataContent.html" type="riot/tag"></script>
     <script src="/assets/templates/sections/profile/popupReferer.html" type="riot/tag"></script>
     <script src="/assets/templates/sections/profile/mobile/profile.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/profile/mobile/profileData.html" type="riot/tag"></script>
 
     <!--/ Payment /-->
     <script src="/assets/templates/sections/plan/plan.html" type="riot/tag"></script>
