--- a/assets/css/ui/basic/_checkbox.scss
+++ b/assets/css/ui/basic/_checkbox.scss
@@ -106,8 +106,10 @@
         }
         input:checked ~ {
             .checkbox-control {
-                @extend .bg-white;
-                @extend .scale-100;
+                &:before {
+                    @extend .bg-white;
+                    @extend .scale-100;
+                }
             }
         }
     }
