--- a/assets/templates/modules/alert.html
+++ b/assets/templates/modules/alert.html
@@ -1,13 +1,13 @@
 <section-alert class="alert" data-open="{ active }">
 
-    <div class="alert__wrapper">
+    <div name="wrapper" class="alert__wrapper">
         <div class="alert__header">
             <h3 class="alert__title">{ data.title }</h3>
             <p if={ data.subtitle } class="alert__subtitle">{ data.subtitle }</p>
         </div>
         <div class="alert__buttons">
-            <div onClick={ onCancel } class="alert__button { alert__button--active : data.button === "cancel" }">{ data.cancel && data.cancel.title ? data.cancel.title : "Отмена" }</div>
-            <div onClick={ onSuccess } class="alert__button { alert__button--active : data.button === "success" }">{ data.success && data.success.title ? data.success.title : "OK" }</div>
+            <div onClick={ onCancel } onUpdate="none" class="alert__button { alert__button--active : data.button === "cancel" }">{ data.cancel && data.cancel.title ? data.cancel.title : "Отмена" }</div>
+            <div onClick={ onSuccess } onUpdate="none" class="alert__button { alert__button--active : data.button === "success" }">{ data.success && data.success.title ? data.success.title : "OK" }</div>
         </div>
     </div>
 
@@ -25,9 +25,10 @@
 
     $.show = function(data){
         if (data){
-            $.data = data;
-            $.active = true;
-            $.update();
+            $.update({
+                active: true,
+                data: data
+            })
         }
     };
 
@@ -36,7 +37,9 @@
             $.data.success.callback();
         }
         $.data.button = "success";
-        $.active = false;
+        $.update({
+            active: false
+        })
     };
 
     $.onCancel = function(){
@@ -44,8 +47,23 @@
             $.data.cancel.callback();
         }
         $.data.button = "cancel";
-        $.active = false;
+        $.update({
+            active: false
+        })
     };
+
+    $.handleClickOutside = function(e){
+        if (!$.wrapper.contains(e.target)) $.onCancel();
+    };
+
+    $.on("updated", function(){
+        if ($.active){
+            document.addEventListener('click', $.handleClickOutside);
+        }
+        else {
+            document.removeEventListener('click', $.handleClickOutside)
+        }
+    });
 
 </script>
 
