--- a/assets/templates/sections/list/mobile/resumeList.html
+++ b/assets/templates/sections/list/mobile/resumeList.html
@@ -8,9 +8,9 @@
 
             <div class="container borderBottomWidth-1 borderStyle-solid borderColor-smoke">
                 <div class="row">
-                    <div class="col-xs-offset-5 col-xs-19 pt-l pb-m">
+                    <div class="col-xs-offset-5 col-xs-19 pt-l pr30 pb-m">
                         <div class="resume__list-m__title">Мой список резюме</div>
-                        <div class="resume__list-m__subtitle">Чтобы создать резюме нажмите на крестик в круге в правом нижнем углу.</div>
+                        <div class="resume__list-m__subtitle">Чтобы создать новое резюме нажмите на синий кружок в низу по центру.</div>
                     </div>
                 </div>
             </div>
