--- a/views/private.html
+++ b/views/private.html
@@ -192,6 +192,7 @@
     <script src="/assets/templates/ui/icons/icon-test.html" type="riot/tag"></script>
     <script src="/assets/templates/ui/icons/icon-share.html" type="riot/tag"></script>
     <script src="/assets/templates/ui/icons/icon-camera.html" type="riot/tag"></script>
+    <script src="/assets/templates/ui/icons/icon-like.html" type="riot/tag"></script>
     <script src="/public/templates/commons/icons/icon-diamond.tag" type="riot/tag"></script>
     <script src="/public/templates/commons/icons/icon-link.tag" type="riot/tag"></script>
     <script src="/public/templates/commons/icons/icon-help.tag" type="riot/tag"></script>
