--- a/assets/css/states/responsive/_text.scss
+++ b/assets/css/states/responsive/_text.scss
@@ -2,6 +2,12 @@
     .nowrap-lg {
         white-space:nowrap;
     }
+    .text-left-lg {
+        text-align:left;
+    }
+    .text-right-lg {
+        text-align:right;
+    }
     .text-center-lg {
         text-align:center;
     }
@@ -9,6 +15,12 @@
 @media screen and (min-width: $w992) and (max-width: $w1024) {
     .nowrap-md {
         white-space:nowrap;
+    }
+    .text-left-md {
+        text-align:left;
+    }
+    .text-right-md {
+        text-align:right;
     }
     .text-center-md {
         text-align:center;
@@ -18,6 +30,12 @@
     .nowrap-sm {
         white-space:nowrap;
     }
+    .text-left-sm {
+        text-align:left;
+    }
+    .text-right-sm {
+        text-align:right;
+    }
     .text-center-sm {
         text-align:center;
     }
@@ -25,6 +43,12 @@
 @media screen and (max-width: $w767) {
     .nowrap-xs {
         white-space:nowrap;
+    }
+    .text-left-xs {
+        text-align:left;
+    }
+    .text-right-xs {
+        text-align:right;
     }
     .text-center-xs {
         text-align:center;
