--- a/assets/css/ui/_icons.scss
+++ b/assets/css/ui/_icons.scss
@@ -47,7 +47,7 @@
         &.icon-s {
             width:50px;
             height:50px;
-            transform:translateY(6px);
+            transform:translateY(4px);
         }
         &.icon-m {
             width:62px;
@@ -69,6 +69,13 @@
             margin-top:-26px;
             margin-bottom:-26px;
             transform:translateY(14px);
+        }
+    }
+    &-like {
+        &.icon-s {
+            width:34px;
+            height:34px;
+            transform:translateY(4px);
         }
     }
     &-user {
@@ -133,8 +140,9 @@
             height:24px;
         }
         &.icon-s {
-            width:32px;
-            height:32px;
+            width:30px;
+            height:30px;
+            transform:translateY(1px);
         }
         &.icon-m {
             width:44px;
@@ -457,6 +465,13 @@
         }
     }
     &-link {
+        &.icon-s {
+            width:40px;
+            height:40px;
+            margin-top:-3px;
+            margin-bottom:-3px;
+            transform:translateY(4px);
+        }
         &.icon-m {
             width:46px;
             height:46px;
@@ -619,7 +634,7 @@
         &.icon-s {
             width:50px;
             height:50px;
-            transform:translateY(6px);
+            transform:translateY(3px);
         }
         &.icon-m {
             width:62px;
